--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap");
 
-html,
+$bg-color: #f5f0ec;
+
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  cursor: none;
+
+  background-color: $bg-color;
 }
 
 a {
@@ -15,4 +20,15 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.main-container {
+  padding: 0 5vw;
+}
+
+section {
+  padding: 100px 0;
+  .section-header {
+    margin-bottom: 50px;
+  }
 }
