--- a/components/Gallery/style.module.scss
+++ b/components/Gallery/style.module.scss
@@ -1,4 +1,97 @@
-.section-wrapper {
-}
-.gallery-wrap {
+.gallery_wrap {
+  background-color: #d53f41;
+  margin-left: -5vw;
+  margin-right: -5vw;
+  position: relative;
+  .gallery_counter {
+    position: absolute;
+    top: 10%;
+    left: 100px;
+    z-index: 1;
+    mix-blend-mode: difference;
+    line-height: 16px;
+    color: #dbd8d6;
+    font-family: "Bai Jamjuree";
+    font-weight: 600;
+    font-size: 16px;
+    display: inline-block;
+
+    .divider {
+      content: "";
+      background-color: white;
+      width: 6.25vw;
+      margin: 7px 10px;
+      height: 1px;
+      display: inline-block;
+    }
+  }
+
+  .gallery {
+    height: 80vh;
+    padding: 10vh 0;
+    width: 400%;
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .gallery_item {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    will-change: transform;
+  }
+
+  .gallery_item_info {
+    position: absolute;
+    bottom: 10%;
+    z-index: 1;
+    transform: translateX(-20%);
+    color: #dbd8d6;
+
+    .gallery_info_title {
+      line-height: 6vw;
+      font-family: "Bai Jamjuree";
+      font-weight: 600;
+      font-size: 6vw;
+      margin: 0;
+    }
+
+    .gallery_info_subtitle {
+      position: relative;
+      line-height: 6vw;
+      font-family: "Bodoni Moda";
+      color: transparent;
+      font-weight: 400;
+      font-size: 6vw;
+      -webkit-text-stroke: 2px #dbd8d6;
+      margin: 0;
+    }
+
+    .gallery_info_category {
+      position: relative;
+      line-height: 24px;
+      font-family: "Bai Jamjuree";
+      font-weight: 400;
+      font-size: 24px;
+      margin-top: 2vh;
+    }
+  }
+
+  .gallery_item_wrapper {
+    aspect-ratio: 16/9;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 20vw 1fr 200px;
+    width: 100vw;
+  }
+
+  .gallery_item_image {
+    background-size: cover;
+    background-position: center;
+    transform-origin: center;
+    width: 100%;
+    height: 100%;
+    will-change: transform;
+    transform: scale(1);
+  }
 }
