--- a/components/Header/style.module.scss
+++ b/components/Header/style.module.scss
@@ -9,6 +9,7 @@
     color: #626262;
     text-transform: uppercase;
     padding: 0;
+    font-weight: 600;
     li {
       list-style-type: none;
       margin: 10px 0;
